[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vivs"
version = "0.1.1"
description = "Calibrated Variational Inference for single-cell omics."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Pierre Boyeau", email = "pierre.boyeau@gmail.com" },
]
dependencies = [
    "scanpy>=1.9.1",
    "jax>=0.4.30",
    "fastcluster>=1.2.6",
    "scikit-misc>=0.2.0",
    "plotnine>=0.12",
    "ml-collections>=0.1.1",
    "xarray>=2023.3.0",
    "torch>=2.0.0,!=2.0.1,!=2.1.0",
    "flax>=0.9.0",
    "numpyro>=0.13.2",
]

[project.optional-dependencies]
test = ["pytest>=7.2.1"]
dev = [
    "vivs[test]",
    "black>=22.12.0",
    "flake8>=3.7.7",
    "isort>=5.11.5",
    "pre-commit>=3.0.2",
]
notebook = ["jupyterlab>=4.0"]
cuda = ["jax[cuda12]>=0.4.30"]

[tool.hatch.build.targets.wheel]
packages = ["vivs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
